O(n^2)解决524题