@@ -3,7 +3,7 @@ package com.bigdeal.leetcode.s524;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class TestSolution {
@@ -12,7 +12,7 @@ public class TestSolution {
     public void test1(){
         String s = "abpcplea";
         String[] strArray = {"ale","apple","monkey","plea"};
-        List<String> dictionary = List.of(strArray);
+        List<String> dictionary = Arrays.asList(strArray);
         String expected = "apple";
 
         Solution solution = new Solution();
@@ -24,7 +24,7 @@ public class TestSolution {
     public void test2(){
         String s = "abpcplea";
         String[] strArray = {"a", "b", "c" };
-        List<String> dictionary = List.of(strArray);
+        List<String> dictionary = Arrays.asList(strArray);
         String expected = "a";
         Solution solution = new Solution();
         String result = solution.findLongestWord(s, dictionary);
@@ -35,7 +35,7 @@ public class TestSolution {
     public void test3(){
         String s = "aaa";
         String[] strArray = {"aaa", "aa", "a" };
-        List<String> dictionary = List.of(strArray);
+        List<String> dictionary = Arrays.asList(strArray);
         String expected = "aaa";
         Solution solution = new Solution();
         String result = solution.findLongestWord(s, dictionary);
@@ -46,7 +46,7 @@ public class TestSolution {
     public void test4(){
         String s = "abpcplea";
         String[] strArray = {"ale","apple","monkey","plea", "abpcplaaa","abpcllllll","abccclllpppeeaaaa"};
-        List<String> dictionary = List.of(strArray);
+        List<String> dictionary = Arrays.asList(strArray);
         String expected = "apple";
         Solution solution = new Solution();
         String result = solution.findLongestWord(s, dictionary);
